Added request to docs testenv

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ commands = nosetests
 basepython = python
 changedir = docs/source
 deps = sphinx
+       requests
 commands = sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv:pypy]
