Fix Travis to use coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ install:
   - make deps
   - make deps-test
 script:
-  - make test
+  - coverage run --source=yarg runtest.py
 after_success:
   - coveralls
