--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = py26, py27, py33, py34, pypy, pypy3, docs
 [testenv]
 deps = nose
        requests
+       mock
 commands = nosetests
 
 [testenv:docs]
