--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,16 @@
 [tox]
-envlist = py26, py27, py33, py34, pypy, pypy3, docs
+envlist = py26, py27, py33, py34, pypy, pypy3, docs, flake8
 
 [testenv]
 deps = nose
        requests
        mock
 commands = nosetests
+
+[testenv:flake8]
+deps = flake8
+       requests
+commands = flake8 yarg
 
 [testenv:docs]
 basepython = python
