--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,16 @@ deps = nose
        mock
 commands = nosetests
 
+[flake8]
+exclude = tests/*
+          .tox/*
+
 [testenv:flake8]
 deps = flake8
        requests
-commands = flake8 yarg
+commands = flake8 --exclude=.tox,docs,tests,build,setup.py
 
 [testenv:docs]
-basepython = python
 changedir = docs/source
 deps = sphinx
        requests
