Tell RTD to build docs on Travis success

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ script:
   - coverage run --source=yarg runtests.py
 after_success:
   - coveralls
+  - curl -X POST https://readthedocs.org/build/yarg
