--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands = nosetests
 [testenv:flake8]
 deps = flake8
        requests
-commands = flake8 --exclude=.tox,docs,tests,build,setup.py
+commands = flake8 yarg --show-source
 
 [testenv:docs]
 changedir = docs/source
