--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py26, py27, py33, py34, pypy, pypy3, docs, flake8
+envlist = py26, py27, py33, py34, py38, pypy, pypy3, docs, flake8
 
 [testenv]
 deps = nose
        requests
-       mock
 commands = nosetests
 
 [testenv:flake8]
