--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py26, py27, py33, py34, py38, pypy, pypy3, docs, flake8
+envlist = py38, pypy, pypy3, docs, flake8
 
 [testenv]
-deps = nose
+deps = pytest
        requests
-commands = nosetests
+commands = pytest
 
 [testenv:flake8]
 deps = flake8
